--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
             <p class="paragrafo__texto"></p>
 
         </section>
-        <img class="foto__sobre__mim" src="./foto site/foto111.png" alt="foto em galway" src="foto111.png" alt="foto em galway" height="580" width="400">
-
+        <img class="foto__sobre__mim" src="./foto site/foto111.png" alt="foto em galway" src="foto111.png" alt="foto em galway">
+        
     </main>
 
 
