--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         
         </section>
-        <img class="apresentacao__imagem" src="./foto site/foto111.png" alt="foto em galway" src="foto111.png" alt="foto em galway" height="580" width="400">>
+        <img class="apresentacao__imagem" src="./foto site/foto111.png" alt="foto em galway" src="foto111.png" alt="foto em galway" height="580">>
 
         
     </main>
