--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
 
-
         </nav>
     </header>
     <main class="apresentacao">
@@ -28,7 +27,7 @@
         </div>
         
         </section>
-        <img class="apresentacao__imagem" src="./foto site/foto111.png" alt="foto em galway" src="foto111.png" alt="foto em galway" height="580">>
+        <img class="apresentacao__imagem" src="./foto site/foto111.png" alt="foto em galway" src="foto111.png" alt="foto em galway" height="580">
 
         
     </main>
